<resources>
    <string name="app_name">CineFast</string>
    <string name="explore_now_n_to_experience_new_benefits">Explore now\n to experience new benefits</string>
    <string name="get_started">Get Started</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="now_showing">Now Showing</string>
    <string name="book_seats">Book Seats</string>
    <string name="trailer">Trailer</string>
    <string name="the_dark_knight">The Dark Knight</string>
    <string name="inception">Inception</string>
    <string name="interstellar">Interstellar</string>
    <string name="interstellar_genre">SciFi / 169min</string>
    <string name="inception_genre">SciFi / 148min</string>
    <string name="the_dark_knight_genre">Action / 152min</string>
    <string name="proceed_to_snacks">Proceed to Snacks</string>
    <string name="movie_name">Movie Name</string>
    <string name="select_items">Select Items</string>
    <string name="snacks_drinks"><![CDATA[Snacks & Drinks]]></string>
    <string name="popcorn">Popcorn</string>
    <string name="large_buttered">Large / Buttered</string>
    <string name="_4_99">$4.99</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="zero">0</string>
    <string name="nachos">Nachos</string>
    <string name="with_cheese_dip">With Cheese Dip</string>
    <string name="_7_99">7.99</string>
    <string name="soft_drinks">Soft Drinks</string>
    <string name="large_any_flavor">Large / Any Flavor</string>
    <string name="_5_99">5.99</string>
    <string name="_6_99">$6.99</string>
    <string name="assorted_candies">Assorted Candies</string>
    <string name="candy_mix">Candy Mix</string>
    <string name="confirm">Confirm</string>
    <string name="booking_details">Booking Details</string>
    <string name="tickets">Tickets</string>
    <string name="total_0">Total: $0</string>
    <string name="seats_0">Seats: 0</string>
    <string name="send_ticket">Send Ticket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>