<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".SnacksPage">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="225dp"
        android:src="@drawable/cinefast"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="20dp"
        android:text="@string/select_items"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:text="@string/snacks_drinks"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="18dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:id="@+id/popcorn"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:background="#1C1C1C"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/popcorn"
                    android:scaleType="centerCrop"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popcorn"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/large_buttered"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:text="@string/_4_99"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnDec"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:text="-"
                            android:textSize="20sp"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:padding="0dp"
                            android:backgroundTint="@color/orange"
                            app:cornerRadius="8dp"/>

                        <TextView
                            android:id="@+id/tvQuantity"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:text="@string/zero"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:gravity="center"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnInc"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:text="+"
                            android:textSize="20sp"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:padding="0dp"
                            android:backgroundTint="@color/white"
                            android:textColor="@color/black"
                            app:cornerRadius="8dp"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>



            <LinearLayout
                android:id="@+id/nachos"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:background="#1C1C1C"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/nachos"
                    android:scaleType="centerCrop"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nachos"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/with_cheese_dip"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:text="@string/_7_99"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnDec1"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:text="@string/sub"
                            android:textSize="20sp"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:padding="0dp"
                            android:backgroundTint="@color/orange"
                            app:cornerRadius="8dp"/>

                        <TextView
                            android:id="@+id/tvQuantity1"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:text="@string/zero"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:gravity="center"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnInc1"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:text="@string/add"
                            android:textSize="20sp"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:padding="0dp"
                            android:backgroundTint="@color/white"
                            android:textColor="@color/black"
                            app:cornerRadius="8dp"/>
                    </LinearLayout>



                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/drinks"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:background="#1C1C1C"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/drinks"
                    android:scaleType="centerCrop"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/soft_drinks"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/large_any_flavor"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:text="@string/_5_99"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnDec2"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:text="@string/sub"
                            android:textSize="20sp"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:padding="0dp"
                            android:backgroundTint="@color/orange"
                            app:cornerRadius="8dp"/>

                        <TextView
                            android:id="@+id/tvQuantity2"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:text="@string/zero"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:gravity="center"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnInc2"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:text="@string/add"
                            android:textSize="20sp"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:padding="0dp"
                            android:backgroundTint="@color/white"
                            android:textColor="@color/black"
                            app:cornerRadius="8dp"/>
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/candymix"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:background="#1C1C1C"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/candymix"
                    android:scaleType="centerCrop"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/candy_mix"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/assorted_candies"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:text="@string/_6_99"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnDec3"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:text="@string/sub"
                            android:textSize="20sp"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:padding="0dp"
                            android:backgroundTint="@color/orange"
                            app:cornerRadius="8dp"/>

                        <TextView
                            android:id="@+id/tvQuantity3"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:text="@string/zero"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:gravity="center"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnInc3"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:text="@string/add"
                            android:textSize="20sp"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:padding="0dp"
                            android:backgroundTint="@color/white"
                            android:textColor="@color/black"
                            app:cornerRadius="8dp"/>
                    </LinearLayout>



                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGo"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textSize="20sp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:backgroundTint="@color/orange"
        app:cornerRadius="8dp"/>

</LinearLayout>